# rinha-de-backend-api-q1-2024

./: Cargo.toml  Dockerfile
.cargo/: config
.sqlx/: query-14426aab1a2257884287f8e689084ea14514b3a1afab5a1ae9d4269badeeb79a.json  query-353268b7894698d82068a9e98fda091c07b72c3e835f7b7ffb69389d38059190.json  query-41475a57f47219aadbcf82875db81f967197004d568f2bc0993c9ba592371f1d.json  query-4edbc6909cbb3c27d09c9552ac77cd008879a62d352e454f9e4d3584b309e457.json  query-5003b44d798ee091268857bd8936da0e7d578d5bd5f19c403e5d9562d7f49106.json  query-5b8519685fc0c4dd07f066f5bec61a98d64055597d911f0079fb9bf438cbfba1.json  query-6ccb35b3b960280ed8062afe33c55fc6dc45ed2cc373c5541470ee7033c3280d.json  query-7eadbfe197125cd3b279c77f3b5c14c1938efa211d8fd33e41b2d126c50af15f.json  query-8d0f9a17104227b1c8cbe899afa12635700557bcee0269f0c3d8c41500938964.json  query-96c174b20d6b90824d4eb52da2e245243613fb0a3f44f706b90552063189010c.json  query-a81f161f71e771b954810b570744dde75438bde6405a564ed4fcd9868e0cea83.json  query-acde3d7b72e61704de9b169434c67dcbdda00217243aef06e81ebba8853fb191.json  query-c135ff496d067f3aa4cc1c2077a7555be82a6198dc5352f90fc3bb93f557f448.json  query-c35b0a0eb13b164e7d2ff093fdd513322fb9283e4d6d499762ff401973b20f4b.json  query-c9f439c2c27a531148a2eae918cfc20fe97f3e66ff471d0aa03f1625fe997e7d.json  query-df6b408d3ec0b2ba3c181349e5caddc6389bd164e1bf62ed0ceb7f3d87981129.json
migrations/: 20240213145043_create_users.sql  20240213145315_create_ledger.sql  20240220123439_atualiza_livro_caixa.sql
src/: lib.rs  main.rs
src/balanço/: main.rs
src/rinha/: main.rs
