[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
chrono = { version = "^0.4.1", features = ["serde", "rustc-serialize"] } 
clap = { version = "^4.4.18", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
bytes = "1.0"
mimalloc = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
overflow-checks = false
