[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
regex = "1.5"
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
chrono = { version = "^0.4.1", features = ["serde", "rustc-serialize"] } 
clap = { version = "^4.4.18", features = ["derive"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git",  features = [ "runtime-tokio", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
bytes = "1.0"
rand = "0.8"
deadpool = { version = "0.10", features = ["rt_tokio_1", "managed"] }
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = false
strip = "symbols"
panic = "abort"

[[bin]]
name = "rinha"
path = "src/rinha/main.rs"

[[bin]]
name = "balanço"
path = "src/balanço/main.rs"
